Positions Manager 0.2 - Configured to use Exception Mapper in Rest - Configured to use OpenApi Generator instead of Apicurio - Operation getPositionById
