# project/recruiters/backend/services/positions-manager-service/src/main/java/com/jaruiz/casarrubios/recruiters/services/posmanager/api/rest/PosManagerRestService.java
@@ -1,20 +1,23 @@
 package com.jaruiz.casarrubios.recruiters.services.posmanager.api.rest;
 
+import java.time.ZoneId;
+import java.util.Date;
 import java.util.List;
 
-import com.jaruiz.casarrubios.recruiters.services.posmanager.api.rest.beans.PositionDTO;
-import com.jaruiz.casarrubios.recruiters.services.posmanager.api.rest.beans.PositionDetailDTO;
-import com.jaruiz.casarrubios.recruiters.services.posmanager.api.rest.beans.RequirementDTO;
+import com.jaruiz.casarrubios.recruiters.services.posmanager.api.rest.dto.*;
 import com.jaruiz.casarrubios.recruiters.services.posmanager.business.PositionManagerService;
 import com.jaruiz.casarrubios.recruiters.services.posmanager.business.exceptions.PositionInvalidException;
 import com.jaruiz.casarrubios.recruiters.services.posmanager.business.exceptions.PositionNotFoundException;
 import com.jaruiz.casarrubios.recruiters.services.posmanager.business.model.Benefit;
 import com.jaruiz.casarrubios.recruiters.services.posmanager.business.model.Position;
 import com.jaruiz.casarrubios.recruiters.services.posmanager.business.model.Requirement;
+import com.jaruiz.casarrubios.recruiters.services.posmanager.business.model.Task;
 import jakarta.enterprise.context.ApplicationScoped;
+import org.jboss.logging.Logger;
 
 @ApplicationScoped
-public class PosManagerRestService implements PositionsResource {
+public class PosManagerRestService implements PositionsApi {
+    private static final Logger logger = Logger.getLogger(PosManagerRestService.class);
 
     private final PositionManagerService positionService;
 
@@ -23,12 +26,31 @@ public class PosManagerRestService implements PositionsResource {
     }
 
     @Override public List<PositionDTO> getAllPositions() {
+        logger.info("Getting all positions");
         return positionService.getAllPositions().stream()
             .map(this::mapToPositionDTO)
             .toList();
     }
 
-    @Override public PositionDetailDTO createPosition(PositionDetailDTO data) {
+    @Override public PositionDetailDTO getPositionDetail(Long positionId) {
+        logger.info("Getting position detail with Id: " + positionId);
+        final Position position = positionService.getPositionDetail(positionId);
+        logger.info("Position with Id: " + positionId + " found");
+
+        return mapToPositionDetailDTO(position);
+    }
+
+    @Override public PositionDetailDTO updatePosition(Long positionId, PositionDetailDTO positionDetailDTO) {
+        return null;
+        /*try {
+            return mapToPositionDetailDTO(positionService.updatePosition(mapToPosition(data)));
+        } catch (PositionInvalidException | PositionNotFoundException e) {
+            throw new RuntimeException(e);
+        }*/
+    }
+
+
+    @Override public PositionDetailDTO createPosition(NewPositionDataDTO data) {
         return null;
         /*try {
             final Position positionCreated = positionService.createPosition(PosManagerRestService.mapToPosition(data));
@@ -38,38 +60,24 @@ public class PosManagerRestService implements PositionsResource {
         }*/
     }
 
-    @Override public PositionDetailDTO getPositionDetail(long positionId) {
-        return null;
-        /*try {
-            return mapToPositionDetailDTO(positionService.getPositionDetail(positionId));
-        } catch (PositionNotFoundException e) {
-            throw new RuntimeException(e);
-        }*/
-    }
-
-    @Override public PositionDetailDTO updatePosition(long positionId, PositionDetailDTO data) {
-        return null;
-        /*try {
-            return mapToPositionDetailDTO(positionService.updatePosition(mapToPosition(data)));
-        } catch (PositionInvalidException | PositionNotFoundException e) {
-            throw new RuntimeException(e);
-        }*/
-    }
-
     private PositionDTO mapToPositionDTO(Position position) {
         final PositionDTO positionDTO = new PositionDTO();
         positionDTO.setId(position.getId());
         positionDTO.setTitle(position.getTitle());
         positionDTO.setDescription(position.getDescription());
+        positionDTO.setStatus(position.getStatus().ordinal());
 
         return positionDTO;
     }
 
-    /*private static PositionDetailDTO mapToPositionDetailDTO(Position position) {
+    private static PositionDetailDTO mapToPositionDetailDTO(Position position) {
         final PositionDetailDTO positionDetailDTO = new PositionDetailDTO();
         positionDetailDTO.setId(position.getId());
         positionDetailDTO.setTitle(position.getTitle());
         positionDetailDTO.setDescription(position.getDescription());
+        positionDetailDTO.setStatus(position.getStatus().ordinal());
+        positionDetailDTO.setCreatedAt(Date.from(position.getCreatedAt().atZone(ZoneId.systemDefault()).toInstant()));
+        positionDetailDTO.setPublishedAt(Date.from(position.getCreatedAt().atZone(ZoneId.systemDefault()).toInstant()));
 
         if (position.getRequirements() != null) {
             positionDetailDTO.setRequirements(position.getRequirements().stream()
@@ -77,9 +85,15 @@ public class PosManagerRestService implements PositionsResource {
                 .toList());
         }
 
-        if (position.getConditions() != null) {
-            positionDetailDTO.setConditions(position.getConditions().stream()
-                .map(PosManagerRestService::mapToConditionDTO)
+        if (position.getBenefits() != null) {
+            positionDetailDTO.setBenefits(position.getBenefits().stream()
+                .map(PosManagerRestService::mapToBenefitDTO)
+                .toList());
+        }
+
+        if (position.getTasks() != null) {
+            positionDetailDTO.setTasks(position.getTasks().stream()
+                .map(PosManagerRestService::mapToTaskDTO)
                 .toList());
         }
 
@@ -89,16 +103,28 @@ public class PosManagerRestService implements PositionsResource {
     private static RequirementDTO mapToRequirementDTO(Requirement requirement) {
         final RequirementDTO requirementDTO = new RequirementDTO();
         requirementDTO.setDescription(requirement.getDescription());
+        requirementDTO.setKey(requirement.getKey());
+        requirementDTO.setIsMandatory(requirement.isMandatory());
+        requirementDTO.setValue(requirement.getValue());
 
         return requirementDTO;
     }
 
-    private static ConditionDTO mapToConditionDTO(Benefit benefit) {
-        final ConditionDTO conditionDTO = new ConditionDTO();
+    private static BenefitDTO mapToBenefitDTO(Benefit benefit) {
+        final BenefitDTO conditionDTO = new BenefitDTO();
         conditionDTO.setDescription(benefit.getDescription());
 
         return conditionDTO;
     }
+
+    private static TaskDTO mapToTaskDTO(Task task) {
+        final TaskDTO taskDTO = new TaskDTO();
+        taskDTO.setDescription(task.getDescription());
+
+        return taskDTO;
+    }
+
+    /*
 
     private static Position mapToPosition(PositionDetailDTO positionDetailDTO) {
         final List<Requirement> requirements = positionDetailDTO.getRequirements().stream()
